:lipstick: 다크모드: next-theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,10 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  .dark {
+    background-color: #232427;
+  }
 }
 
 @layer utilities {
