--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,11 +10,14 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /* @apply transition-colors duration-700; */
   }
 
-  .dark {
-    background-color: #232427;
+  *,
+  ::before,
+  ::after {
+    @apply bg-light-bgColor;
+    @apply dark:bg-dark-bgColor;
+    @apply dark:border-gray-600;
   }
 }
 
