--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,9 +33,18 @@
   animation-delay: calc(var(--index) * 130ms);
 }
 
+.prose pre {
+  @apply border border-gray-200 dark:border-gray-700 py-4 px-0;
+}
+
 /* pretty-code (shiki) recommend */
 .prose pre > code {
-  display: block;
+  @apply grid text-xs leading-5
+}
+
+/* Fenced Code block - line style */
+.prose pre span.line {
+  @apply inline-block px-4 py-0.5 leading-snug;
 }
 
 /* Fenced Code block - display change on theme switching*/
@@ -46,6 +55,14 @@
 .light .prose div[data-rehype-pretty-code-title][data-theme='dark'],
 .dark .prose div[data-rehype-pretty-code-title][data-theme='light'] {
   display: none;
+}
+
+/* Fenced Code block - with title style*/
+.prose div[data-rehype-pretty-code-title] {
+  @apply p-3 font-mono text-xs font-bold tracking-tight text-gray-800 bg-gray-200 border border-b-0 border-gray-200 rounded-t-lg dark:text-gray-200 dark:border-gray-700 dark:bg-gray-800;
+}
+.prose div[data-rehype-pretty-code-title] + pre {
+  @apply mt-0 rounded-t-none;
 }
 
 /* Fenced Code block - line number style */
@@ -60,7 +77,7 @@
   /* Other Styling */
   display: inline-block;
   width: 1rem;
-  margin-right: 2rem;
+  margin-right: 1rem;
   text-align: right;
   color: gray;
   font-size: 11px;
@@ -71,9 +88,14 @@
 }
 
 .prose code[data-line-numbers-max-digits='3'] > span.line::before {
-  width: 2rem;
+  width: 1rem;
 }
 
+/* Fenced Code block - line hightlight */
+/* pl값 calc - .prose pre span.line의 px값에 영향 받음 */
+.prose code span.line.line-highlighted {
+  @apply border-l-2 border-y-0 border-transparent bg-opacity-10 border-blue-400 bg-indigo-400 dark:border-blue-500 dark:bg-slate-700 pl-[calc(1rem-2px)]
+}
 
 /* Inline code block backtick display: none */
 .prose :not(pre) > code::before,
@@ -81,7 +103,7 @@
   display: none;
 }
 
-/* inline code block style */
+/* Inline code block style */
 .prose :not(pre) > code {
   @apply bg-white text-red-500 border border-gray-200 dark:bg-zinc-700 dark:text-red-400 dark:border-0 font-mono text-sm font-normal align-middle py-0.5 px-1.5 rounded mx-0.5;
 }
