--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --bg-color: #fff;
+}
+
+:root.dark {
+  --bg-color: #2a2c33;
+}
+
 @layer base {
   body {
     width: 100vw;
     min-height: 100vh;
+    background-color: var(--bg-color);
     overflow-x: hidden;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+  }
+
+  *, ::before, ::after {
+    @apply border-gray-200 dark:border-gray-600
   }
 
   a:hover, Link:hover {
@@ -24,6 +37,9 @@
   }
 
   /* dark mode */
+  .dark {
+    @apply border-gray-600;
+  }
   .dark ::selection {
     @apply bg-primary;
   }
