:pencil2: Fix typos

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,7 @@
 
 /* Fenced Code block - with title style*/
 .prose div[data-rehype-pretty-code-title] {
-  @apply p-3 font-mono text-xs font-bold tracking-tight text-gray-800 bg-gray-200 border border-b-0 border-gray-200 rounded-t-lg dark:text-gray-200 dark:border-gray-700 dark:bg-gray-800;
+  @apply p-3 font-mono text-xs font-bold tracking-tight text-gray-800 bg-gray-200 border border-b-0 rounded-t-lg dark:text-gray-200 dark:bg-gray-800;
 }
 .prose div[data-rehype-pretty-code-title] + pre {
   @apply mt-0 rounded-t-none;
