:iphone: 모바일 반응형 - 글씨크기 및 간격 조정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,6 +59,10 @@
   animation-delay: calc(var(--index) * 130ms);
 }
 
+.prose {
+  @apply text-sm leading-6 md:text-base md:leading-7
+}
+
 .prose p > a {
   @apply text-primary dark:text-secondary
 }
