--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,11 +44,11 @@
 }
 
 .heading-first {
-  @apply font-bold text-3xl
+  @apply font-bold md:text-3xl text-2xl
 }
 
 .heading-second {
-  @apply font-bold text-2xl
+  @apply font-bold md:text-2xl text-xl
 }
 
 .highlight-words span {
